[gd_scene load_steps=8 format=3 uid="uid://c0qp3xe2y0vx6"]

[ext_resource type="Script" path="res://addons/opera_sdk/UI/ProgressBar.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dxtig5oviljfh" path="res://addons/opera_sdk/images/spinner_background.png" id="1_bbhuc"]
[ext_resource type="Texture2D" uid="uid://hfc4do1cke5q" path="res://addons/opera_sdk/images/spinner_indicator.png" id="2_ml54q"]
[ext_resource type="Script" path="res://addons/opera_sdk/UI/Spinner.gd" id="4_ev1ia"]

[sub_resource type="Animation" id="Animation_arf2e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_4fpru"]
resource_name = "rotation"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nuxt5"]
_data = {
"RESET": SubResource("Animation_arf2e"),
"rotation": SubResource("Animation_4fpru")
}

[node name="AcceptDialog" type="AcceptDialog"]
position = Vector2i(0, 36)
size = Vector2i(400, 98)
visible = true
unresizable = true
ok_button_text = "Cancel"
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -41.0
offset_right = 192.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel"]
layout_mode = 2

[node name="SpinnerBackground" type="TextureRect" parent="Panel/HBoxContainer2"]
modulate = Color(1, 1, 1, 0.772549)
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_bbhuc")
expand_mode = 1

[node name="SpinnerIndicator" type="TextureRect" parent="Panel/HBoxContainer2/SpinnerBackground"]
modulate = Color(0.180392, 0.431373, 1, 0.470588)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 20)
texture = ExtResource("2_ml54q")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel/HBoxContainer2/SpinnerBackground/SpinnerIndicator"]
libraries = {
"": SubResource("AnimationLibrary_nuxt5")
}
autoplay = "rotation"
script = ExtResource("4_ev1ia")

[node name="InfoLabel" type="Label" parent="Panel/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Info"

[connection signal="canceled" from="." to="." method="_on_canceled"]
[connection signal="confirmed" from="." to="." method="_on_confirmed"]
